--- a/flex/06-flex-layout/style.css
+++ b/flex/06-flex-layout/style.css
@@ -5,6 +5,8 @@ body {
   margin: 0;
   overflow: hidden;
   font-family: Roboto, sans-serif;
+  display: flex;
+  flex-direction: column;
 }
 
 img {
@@ -24,4 +26,38 @@ input {
   padding: 8px 24px;
   width: 400px;
   margin-bottom: 16px;
+}
+
+li{
+  list-style: none;
+}
+
+.header,.footer {
+  display: flex;
+  justify-content: space-between;
+}
+
+.footer{
+  align-items: flex-end;
+  background-color: #eee;
+}
+
+ul{
+  display: flex;
+  gap: 10px;
+}
+
+.right-links{
+  padding-right: 40px;
+}
+.content{
+  margin: auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+a{
+  text-decoration: none;
+  color: black;
 }
