--- a/grid/01-grid-layout-1/style.css
+++ b/grid/01-grid-layout-1/style.css
@@ -1,13 +1,27 @@
+/* - The gap is 15px
+- The grid has two columns
+- The grid has four rows
+- The second column is three times larger than the first
+- The third row is five times larger than the others
+- The header and footer elements span across both columns
+- The sidebar element only spans across the first column
+- The nav and article elements span across the second column
+ */
+
 body, html {
   height: 100%;
   margin: 0;
 }
 
 .container {
+  display: grid;
+  grid-template-columns: 200px 600px;
+  grid-template-rows: 100px 100px 500px 100px;
   text-align: center;
   height: 100%;
   padding: 16px;
   box-sizing: border-box;
+  gap: 8px;
 }
 
 .container div {
@@ -21,18 +35,23 @@ body, html {
 
 .header {
   background-color: #FFDE22;
+  grid-column: 1 / 4;
 }
 
 .sidebar {
   background-color: #FF7755;
+  grid-column: 1 / 2;
+  grid-row: 2 / 4;
 }
 
 .nav {
   background-color: #00DDFF;
+  grid-column: 2 / 4;
 }
 
 .article {
   background-color: #bccbde;
+  grid-column: 2 / 4;
 }
 
 .article p {
@@ -44,4 +63,6 @@ body, html {
 
 .footer {
   background-color: #393f4d;
+  grid-column: 1 / 4;
 }
+
